--- a/themes/lynx/layouts/_default/baseof.html
+++ b/themes/lynx/layouts/_default/baseof.html
@@ -6,5 +6,6 @@
   >
     <main class="flex-grow">{{- block "main" . }}{{- end }}</main>
     {{- partial "footer.html" . -}}
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "dfec193104b1484dbb51f81cc9097676"}'></script><!-- End Cloudflare Web Analytics -->
   </body>
 </html>
