--- a/themes/lynx/layouts/partials/analytics.html
+++ b/themes/lynx/layouts/partials/analytics.html
@@ -4,3 +4,5 @@
   {{ end }}
   {{ template "_internal/google_analytics.html" . }}
 {{ end }}
+
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "dfec193104b1484dbb51f81cc9097676"}'></script><!-- End Cloudflare Web Analytics -->
